; ModuleID = '/home/carl/AnghaBench/kphp-kdb/weights/extr_weights-data.c_clearin.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/weights/extr_weights-data.c_clearin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Buff = common dso_local global i32* null, align 8
@BUFFSIZE = common dso_local global i32 0, align 4
@wptr = common dso_local global i32* null, align 8
@rptr = common dso_local global i32* null, align 8
@idx_crc32c_complement = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @clearin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clearin() #0 {
  %1 = load i32*, i32** @Buff, align 8
  %2 = icmp eq i32* %1, null
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = load i32, i32* @BUFFSIZE, align 4
  %5 = call i32* @malloc(i32 %4)
  store i32* %5, i32** @Buff, align 8
  %6 = load i32*, i32** @Buff, align 8
  %7 = call i32 @assert(i32* %6)
  br label %8

8:                                                ; preds = %3, %0
  %9 = load i32*, i32** @Buff, align 8
  %10 = load i32, i32* @BUFFSIZE, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  store i32* %12, i32** @wptr, align 8
  store i32* %12, i32** @rptr, align 8
  store i32 -1, i32* @idx_crc32c_complement, align 4
  ret void
}

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @assert(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
